--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <main>
-        <div id="container">
+        <div class="grid">
+            
             
         </div>
     </main>
