added the title

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <main>
+        <div class="pageHeader">
+            <h1>Macho Moods</h1>
+            <h2> How are you feeling today?</h2>
+        </div>
         <div id="grid">
             
             
